# menial_2

./: .gitignore  Cargo.toml  Dockerfile  builder.yml  menial.yml
default/: index.html
default/pages/: 400.html  401.html  404.html
default/welcomepage/: index.html
default/welcomepage/style/: main.css
deployment/: generate_index.sh  index.html  index.neutral  main.css
src/: config.rs  lib.rs  logger.rs  server.rs  utils.rs
website/: Makefile
website/src/jinja/: _base.jinja  documentation.jinja  download.jinja  help.jinja  imprint.jinja  index.jinja  license.jinja  privacy.jinja
website/src/less/: main.less
website/utils/: update_values.py
