[package]
name = "menial_2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
chrono = "0.4"
ansi_term = "0.11"
yaml-rust = "0.4"
lazy_static = "1.4"
openssl = "0.10.36"
num_cpus = "1.13.0"
sha2 = "0.9"